# boto-assume-role-with-mfa

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: test.yaml
boto_assume_role_with_mfa/: __init__.py  arn.py  mfa_session.py  sso_session.py
tests/: arn_test.py  mfa_session_test.py
