[tool.poetry]
name = "boto-assume-role-with-mfa"
version = "0.1.0"
description = "A package for assuming AWS IAM roles using boto and cached MFA"
authors = ["Vyn Team <support@vyntelligence.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
botocore = "^1.19.45"
pytz = "^2021.1"
boto3 = "^1.17.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pylint = "^2.7.1"
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
