[tool.poetry]
name = "boto-assume-role-with-mfa"
version = "0.1.0"
description = "A package for assuming AWS IAM roles using boto and cached MFA"
authors = ["Vyn Team <support@vyntelligence.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
botocore = "^1.40.26"
pytz = "^2025.2"
boto3 = "^1.40.26"
aws-sso-lib = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.2"
pylint = "^3.3.8"
black = "^25.1.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
