[tool.poetry]
name = "boto-assume-role-with-mfa"
version = "0.1.0"
description = "A package for assuming AWS IAM roles using boto and cached MFA"
authors = ["Vyn Team <support@vyntelligence.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.11"
botocore = "^1.43.38"
pytz = "^2026.2"
boto3 = "^1.43.38"
aws-sso-lib = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^9.1.1"
pylint = "^4.0.6"
black = "^26.5.1"
mypy = "^2.1.0"

[tool.poetry.group.dev.dependencies]
types-pytz = "^2026.2.0.20260518"
types-python-dateutil = "^2.9.0.20260518"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
